# se-toolkit-lab-7

./: .env.bot.example  README.md  docker-compose.yml
backend/: Dockerfile  requirements.txt
bot/: Dockerfile  PLAN.md  __main__.py  bot.py  config.py  pyproject.toml  requirements.txt  router.py  tools.py
bot/handlers/: start_handler.py
bot/handlers/commands/: __init__.py
bot/services/: __init__.py  api_client.py  lms_client.py
