[project]
name = "lms-bot"
version = "0.1.0"
description = "Telegram bot for LMS"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bot", "config", "router", "tools"]
packages = ["handlers", "services"]
